--- a/style.css
+++ b/style.css
@@ -46,6 +46,14 @@
     filter: brightness(80%);
 }
 
+.imgBtnPower {
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    top: 599px;
+    left: 101px;
+}
+
 .powerOn {
     box-shadow: inset 0 0 30px 15px #555;
     opacity: 1;
