--- a/style.css
+++ b/style.css
@@ -54,6 +54,49 @@
     left: 101px;
 }
 
+.imgDir {
+    position: absolute;
+    width: 31px;
+    height: 20px;
+    /* top: 705px;
+    left: 452px;*/
+}
+
+.baixo {
+    position: absolute;
+    width: 31px;
+    height: 20px;
+    top: 705px;
+    left: 452px;
+}
+
+.cima {
+    position: absolute;
+    width: 31px;
+    height: 20px;
+    top: 620px;
+    left: 452px;
+    rotate: 180deg;
+}
+
+.direita {
+    position: absolute;
+    width: 31px;
+    height: 20px;
+    top: 665px;
+    left: 500px;
+    rotate: 270deg;
+}
+
+.esquerda {
+    position: absolute;
+    width: 31px;
+    height: 20px;
+    top: 665px;
+    left: 402px;
+    rotate: 90deg;
+}
+
 .powerOn {
     box-shadow: inset 0 0 30px 15px #555;
     opacity: 1;
