--- a/style.css
+++ b/style.css
@@ -49,10 +49,10 @@
 .imgRetorno {
     position: absolute;
     width: 17px;
-    ;
     top: 533px;
     z-index: 2;
     left: 176px;
+    opacity: 0.6;
 }
 
 .imgBtnPower {
@@ -61,12 +61,14 @@
     height: 50px;
     top: 599px;
     left: 103px;
+    opacity: 0.5;
 }
 
 .imgDir {
     position: absolute;
     width: 31px;
     height: 20px;
+    opacity: 0.5;
 
 }
 
