--- a/style.css
+++ b/style.css
@@ -1,16 +1,22 @@
 * {
+    margin: 0;
     font-family: 'VT323', monospace;
     font-size: 30px;
     color: white;
 
 }
 
+
 .pokedex {
+    display: flex;
+    position: relative;
+    left: -22px;
     height: 800px;
     width: 1161px;
-    background-image: url(/IMG-20230726-WA0107.png);
+    background-image: url(/IMG-20230726-WA0107-removebg.png);
     background-size: 100%;
     background-repeat: no-repeat;
+
 }
 
 .display {
@@ -20,8 +26,9 @@
     overflow: hidden;
 
     position: absolute;
-    top: 257px;
-    left: 130px;
+    top: 248px;
+    left: 120px;
+
     background-color: black;
     width: 366px;
     height: 247px;
@@ -35,11 +42,10 @@
     width: 45px;
     height: 45px;
     background-color: red;
-
     box-shadow: rgba(0, 0, 0, 0.2) 0 -1px 7px 1px, inset #441313 0 -1px 9px, rgba(255, 0, 0, 0.5) 0 2px 12px;
     border-radius: 400px;
-    top: 521px;
-    left: 162px;
+    top: 513px;
+    left: 154px;
 }
 
 .btnReset:active {
@@ -49,9 +55,9 @@
 .imgRetorno {
     position: absolute;
     width: 17px;
-    top: 533px;
+    top: 526px;
     z-index: 2;
-    left: 176px;
+    left: 169px;
     opacity: 0.6;
 }
 
@@ -59,8 +65,8 @@
     position: absolute;
     width: 50px;
     height: 50px;
-    top: 599px;
-    left: 103px;
+    top: 592px;
+    left: 95px;
     opacity: 0.5;
 }
 
@@ -70,40 +76,36 @@
     height: 20px;
     opacity: 0.5;
 
+
 }
 
 .baixo {
-    position: absolute;
-    width: 31px;
-    height: 20px;
-    top: 710px;
-    left: 453px;
+
+    top: 703px;
+    left: 447px;
 }
 
+
+
 .cima {
-    position: absolute;
-    width: 31px;
-    height: 20px;
-    top: 620px;
-    left: 452px;
+    top: 614px;
+    left: 445px;
     rotate: 180deg;
 }
 
 .direita {
-    position: absolute;
-    width: 31px;
-    height: 20px;
-    top: 664px;
-    left: 498px;
+
+    top: 658px;
+    left: 493px;
     rotate: 270deg;
+
 }
 
 .esquerda {
-    position: absolute;
-    width: 31px;
-    height: 20px;
-    top: 664px;
-    left: 408px;
+
+
+    top: 659px;
+    left: 396px;
     rotate: 90deg;
 }
 
@@ -123,13 +125,14 @@
 .displayDir {
     display: flex;
     position: absolute;
-    top: 278px;
-    left: 709px;
+    top: 270px;
+    left: 701px;
     background-color: red;
     width: 374px;
     height: 140px;
     border-radius: 13px;
 }
+
 
 
 .btnDir {
@@ -151,33 +154,31 @@
 }
 
 .btnDir.dir {
-    top: 660px;
-    left: 483px;
+    top: 653px;
+    left: 475px;
     height: 30px !important;
     width: 50px !important;
 }
 
 .btnDir.esq {
-    top: 660px;
-    left: 404px;
+    top: 652px;
+    left: 396px;
     height: 30px !important;
     width: 50px !important;
-
 }
 
 
 
 .btnDir.cim {
-
-    top: 611px;
-    left: 452px;
+    top: 604px;
+    left: 445px;
     height: 50px !important;
     width: 31px !important;
 }
 
 .btnDir.bai {
-    top: 687px;
-    left: 453px;
+    top: 679px;
+    left: 445px;
     height: 50px !important;
     width: 31px !important;
 }
@@ -186,8 +187,8 @@
     display: flex;
     justify-content: space-between;
     position: absolute;
-    top: 25px;
-    left: 203px;
+    top: 17px;
+    left: 194px;
     width: 126px;
 }
 
@@ -235,8 +236,8 @@
 
 .btnPower {
     position: absolute;
-    top: 593px;
-    left: 96px;
+    top: 584px;
+    left: 88px;
     width: 62px;
     height: 65px;
     background-color: transparent;
