--- a/style.css
+++ b/style.css
@@ -126,6 +126,7 @@
     display: flex;
 
     position: relative;
+    overflow: hidden;
     top: 270px;
     left: 701px;
     background-color: black;
@@ -136,12 +137,19 @@
 
 }
 
+.descriptionPoke {
+    padding: 8px;
 
+}
+
+.reaction>ul {
+    margin-top: 10px;
+}
 
 .descriptionPoke.ligado {
     position: absolute;
     display: flex;
-    top: 7px;
+
     left: 10px;
     flex-direction: column;
 
@@ -276,7 +284,7 @@
     display: flex;
     flex-direction: row;
     margin: 0 50px 0 0;
-    transition: 1s;
+    /*transition: 1s;*/
 }
 
 .listPokemons img {
